swagger yaml update route
